[gd_scene load_steps=2 format=3 uid="uid://ec825pv523b1"]

[ext_resource type="Script" path="res://Scripts/SaveEntry.gd" id="1_entry"]

[node name="SaveEntry" type="PanelContainer"]
custom_minimum_size = Vector2(0, 80)
script = ExtResource("1_entry")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="InfoContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="FileName" type="Label" parent="MarginContainer/HBoxContainer/InfoContainer"]
layout_mode = 2
text = "Save File Name"

[node name="StatsLabel" type="Label" parent="MarginContainer/HBoxContainer/InfoContainer"]
layout_mode = 2
text = "Health: 100/500 | Level: 1"

[node name="ButtonContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 5

[node name="LoadButton" type="Button" parent="MarginContainer/HBoxContainer/ButtonContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "Load"

[node name="DeleteButton" type="Button" parent="MarginContainer/HBoxContainer/ButtonContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "Delete"

[connection signal="pressed" from="MarginContainer/HBoxContainer/ButtonContainer/LoadButton" to="." method="_on_load_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/ButtonContainer/DeleteButton" to="." method="_on_delete_pressed"]
